# libcaca

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  BUGS  COPYING.ISC  ChangeLog  Makefile  Makefile.am  NEWS  NOTES  README  THANKS  TODO  bootstrap  build-dos  build-kernel  build-win32  build-win64  caca-config.in  collide.c  common.h  configure.ac  explosions.c  libcaca.sln  libcaca.spec  main.c  player.c  starfield.c  stubs.h  weapons.c
caca/: .gitignore  Makefile.am  attr.c  box.c  caca.c  caca.h  caca.pc.in  caca0.c  caca0.h  caca_conio.c  caca_conio.h  caca_debug.h  caca_internals.h  caca_prof.h  caca_stubs.h  caca_types.h  caca_types.h.in  canvas.c  charset.c  conic.c  dirty.c  dither.c  driver_cocoa.m  driver_conio.c  driver_gl.c  driver_ncurses.c  driver_network.c  driver_raw.c  driver_slang.c  driver_vga.c  driver_win32.c  driver_x11.c  event.c  export.c  figfont.c  file.c  font.c  frame.c  getopt.c  graphics.c  (+13 more)
caca-sharp/: .gitignore  AssemblyInfo.cs  Attr.cs  Caca.cs  Canvas.cs  Display.cs  Dither.cs  Event.cs  Font.cs  Makefile.am  caca-sharp.csproj  caca-sharp.pc.in  caca-sharp.snk  test-csharp.csproj  test.cs
caca/codec/: codec.h  export.c  import.c  text.c
caca/driver/: cocoa.m  conio.c  gl.c  ncurses.c  null.c  raw.c  sdl.c  slang.c  vga.c  win32.c  x11.c
caca/t/: Makefile.am  bench.c  bench.vcxproj  bug-setlocale.c  canvas.cpp  check-copyright  check-doxygen  check-source  check-win32  driver.cpp  export.cpp  simple.c
cpp/: Makefile.am  Makefile.in  caca++.cpp  caca++.h  caca++.pc  caca++.pc.in  cpptest.cpp  cucul++.cpp  cucul++.h  cucul++.pc  cucul++.pc.in
csharp/: .gitignore  AssemblyInfo.cs  Caca.cs  Cucul.cs  Display.cs  Event.cs  Makefile.am  caca-sharp.dll.config  caca-sharp.dll.config.in  cucul-sharp.dll.config  cucul-sharp.dll.config.in  libCaca.dll.config  libCucul.dll.config  test-csharp.csproj  test.cs
cucul/: .gitignore  Makefile.am  attr.c  bitmap.c  box.c  buffer.c  canvas.c  char.c  charset.c  colour.c  conic.c  cucul.c  cucul.h  cucul.pc.in  cucul_internals.h  cucul_types.h.in  dither.c  error.c  export.c  export_ansi.c  export_bitmap.c  export_html.c  export_irc.c  export_ps.c  export_svg.c  figfont.c  file.c  font.c  font_mono9.h  font_monobold12.h  font_monospace9.h  frame.c  import.c  legacy.c  line.c  math.c  mono9.data  monobold12.data  sprite.c  transform.c  (+1 more)
cxx/: .gitignore  Makefile.am  caca++.cpp  caca++.h  caca++.pc.in  cpptest.cpp  cucul++.cpp  cucul++.h  cucul++.pc.in  cxxtest.cpp  libcaca++.vcproj  libcaca++.vcxproj  test-cxx.vcproj  test-cxx.vcxproj
doc/: .gitignore  Makefile.am  caca-config.1  caca-demo.1  caca-spritedit.1  cacademo.1  cacafire.1  cacaplay.1  cacaserver.1  cacaview.1  canvas.dox  doxygen.cfg  doxygen.cfg.in  doxygen.css  font.dox  header.html  img2irc.1  img2txt.1  libcaca.dox  migrating.dox  shapes.txt  style.dox  tutorial.dox  user.dox
examples/: .gitignore  Makefile.am  aafire.c  blit.c  blit.vcproj  blit.vcxproj  caca.txt  cacaball.c  cacacirc.c  cacamoir.c  cacaplas.c  cacaview.c  canvas.c  colors.c  colors.vcproj  colors.vcxproj  conio-snake.cpp  conio-snake.vcproj  conio-snake.vcxproj  conio.c  conio.vcproj  conio.vcxproj  cucul.c  demo.c  demo.vcproj  demo.vcxproj  demo0.c  dithering.c  dithering.vcproj  dithering.vcxproj  driver.c  driver.vcproj  driver.vcxproj  event.c  event.vcproj  event.vcxproj  export.c  figfont.c  font.c  font.vcproj  (+35 more)
java/: .gitignore  Makefile.am  README  caca_java_common.c  caca_java_common.h  org_zoy_caca_Attribute.c  org_zoy_caca_Caca.c  org_zoy_caca_Canvas.c  org_zoy_caca_Display.c  org_zoy_caca_Dither.c  org_zoy_caca_Event.c  org_zoy_caca_Font.c
java/examples/: Driver  Driver.java  TrueColor  TrueColor.java
kernel/: Makefile.am  kernel.c  kernel.h  klibc.c  klibc.h  multiboot.S  multiboot.h
kernel/boot/: bootsect.asm  gdt.c  idt.c  int.asm  interruptions.c  pic.c  stage2.c  stage2.h
libcaca/: Makefile.am  blit.c  caca.c  caca_internals.h  conic.c  graphics.c  io.c  line.c  sprite.c  triangle.c
libee/: Makefile.am  blit.c  box.c  circle.c  conic.c  ee.c  ee.h  ee_internals.h  graphics.c  io.c  line.c  math.c  sprite.c  triangle.c
msvc/: Makefile.am  caca-sharp.csproj  cacaball.vcproj  cacademo.vcproj  cacafire.vcproj  cacamoir.vcproj  cacaplas.vcproj  cacaview.vcproj  config.h  cucul-sharp.csproj  cucul_types.h  libcaca++.vcproj  libcaca.sln  libcaca.vcproj  libcucul++.vcproj  libcucul.def  libcucul.vcproj  test-csharp.csproj  test-cxx.vcproj
python/: Makefile  Makefile.am  README  caca.txt  pypycaca.c  pypycaca.h  setup.py  snake.py  test1.py  test2.py
ruby/: .gitignore  Makefile  Makefile.am  README  caca-canvas.c  caca-canvas.h  caca-display.c  caca-display.h  caca-dither.c  caca-dither.h  caca-event.c  caca-event.h  caca-font.c  caca-font.h  caca.c  common.h  cucul-canvas.c  cucul-canvas.h  cucul-dither.c  cucul-dither.h  cucul-font.c  cucul-font.h  cucul.c  ruby-caca.dox  ruby-cucul.dox  ruby.dox  test
src/: .cvsignore  .gitignore  Makefile.am  aafire.c  aliens.c  bitmap.c  blit.c  bonus.c  box.c  caca.c  caca.h  caca_internals.h  cacaball.c  cacaclock.c  cacademo.c  cacademo.vcproj  cacademo.vcxproj  cacadraw.c  cacafire.vcproj  cacafire.vcxproj  cacamoir.c  cacaplas.c  cacaplay.c  cacaserver.c  cacaview.c  cacaview.vcproj  cacaview.vcxproj  ceo.c  char.c  collide.c  common-image.c  common-image.h  common.h  conic.c  cucul.c  cucul.h  cucul_internals.h  event.c  explosions.c  export.c  (+19 more)
test/: .gitignore  Makefile.am  all.c  bench.vcxproj  blit.c  caca-test.cpp  canvas.cpp  check-build  check-copyright  check-doxygen  check-source  check-win32  colors.c  cucul.c  demo.c  demo0.c  dirty.cpp  dithering.c  driver.cpp  event.c  export.c  export.cpp  font.c  font2tga.c  frames.c  fullwidth.c  gamma.c  hsv.c  import.c  input.c  matrix.c  optipal.c  simple.c  spritedit.c  swallow.c  term.c  text.c  toilet.c  transform.c  truecolor.c  (+1 more)
tests/: .gitignore  Makefile.am  bench.c  bench.vcproj  caca-test.cpp  canvas.cpp  check-build  cucul-test.cpp  dirty.cpp  driver.cpp  simple.c
tools/: .gitignore  Makefile.am  makefont.c  optipal.c  sortchars.c
(+148 files in other folders)
